--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -1,6 +1,8 @@
 version: '2'
 
 # Be sure to set these environment variables:
+#  - INFLUXDB_ADMIN_USER
+#  - INFLUXDB_ADMIN_PASSWORD
 #  - INFLUXDB_DB
 #  - INFLUXDB_USER
 #  - INFLUXDB_USER_PASSWORD
@@ -29,14 +31,23 @@ services:
     privileged: true
     restart: no
 
-  sensors-enviro-phat:
-     build: telegraf
-     depends_on:
-       - influxdb
-       - dtoverlay-enviro-phat
-     environment:
-       - 'TELEGRAF_EXEC_COMMAND=/collect/mock_dht_sensor.sh'
-     restart: on-failure
+  bmp280-sensor:
+    build: telegraf
+    depends_on:
+      - influxdb
+      - dtoverlay-enviro-phat
+    environment:
+      - 'TELEGRAF_EXEC_COMMAND=/collect/bmp280.sh'
+    restart: on-failure
+
+  ads1015-sensor:
+    build: telegraf
+    depends_on:
+      - influxdb
+      - dtoverlay-enviro-phat
+    environment:
+      - 'TELEGRAF_EXEC_COMMAND=/collect/ads1015.sh'
+    restart: on-failure
 
 volumes:
   influxdb-data:
