--- a/app/telegraf/telegraf.conf
+++ b/app/telegraf/telegraf.conf
@@ -58,7 +58,7 @@
 # Configuration for sending metrics to InfluxDB
 [[outputs.influxdb]]
   ## The full HTTP or UDP URL for your InfluxDB instance.
-  urls = ["https://influxdb:8086"]
+  urls = ["http://influxdb:8086"]
 
   ## The target database for metrics; will be created as needed.
   database = "$INFLUXDB_DB"
