Switch dtoverlay to explicit ARM image source to work with builders.

--- a/app/dtoverlay/Dockerfile
+++ b/app/dtoverlay/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:latest
+FROM balenalib/armv7hf-alpine:latest
 
 # Allow the user to override or specify the version of the DTC compiler to use.
 # Default to the latest one at the time of this image's creation (1.4.7).
